--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,17 +16,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas
+          pip install pandas scikit-learn mlflow fastapi uvicorn
 
-      - name: Run drift check
-        run: python timed_hello.py
+      - name: Generate data
+        run: python data_generator.py
 
-      - name: Upload log
-        uses: actions/upload-artifact@v4
-        with:
-          name: pipeline-log
-          path: pipeline.log
-	
+      - name: Train and log model
+        run: python train_model.py
+
       - name: Test FastAPI
         run: |
           docker build -t drift-api .
@@ -36,3 +33,11 @@ jobs:
                -H "Content-Type: application/json" \
                -d '{"features": [0.1, -0.2, 0.3] + [0]*17}' || exit 1
           docker stop api && docker rm api
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: pipeline-artifacts
+          path: |
+            ml_data.csv
+            pipeline.log
